# surf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  update-sdsl.sh
benchmark/: K.config  K_int.config  Makefile  collections.config  collections_int.config  experiment0.sh  experiment1.K.config  experiment1.config  experiment2.COL.config  experiment2.COL_INT.config  experiment2.IDX.config  experiment2.IDX_INT.config  experiment2.config  experiment3.COL.config  experiment3.COL_INT.config  experiment3.PAT.config  experiment3.config  pattern_len.config  pattern_len_int.config
benchmark/results/: experiment0.txt  experiment1.txt  experiment2.txt  experiment3.txt  experiment5.txt
benchmark/visualize/: experiment0.R  experiment0.tex  experiment1.R  experiment1.tex  experiment2.R  experiment2.tex  experiment3.R  experiment3.tex  experiment3a.R  experiment3a.tex  index-filter.config
collections/: README.md
collections/DEBUG/: gen.cpp  text_SURF.sdsl
collections/cluewebB/index/: space_usage_IDX_D.html  space_usage_IDX_D1R1.html  space_usage_IDX_DR.html
collections/docs/: 1.txt  2.txt  3.txt  4.txt
collections/docs2/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
collections/gov2/index/: space_usage_IDX_D.html  space_usage_IDX_D1R1.html  space_usage_IDX_DR.html
collections/my/: dict.txt  doc_names.txt
collections/my2/: dict.txt  doc_names.txt
collections/speeches/: dict.txt  doc_names.txt  text_int_SURF.sdsl
collections/wikishort/: dict.txt  doc_names.txt  text_int_SURF.sdsl
config/: DUMMY.config  IDX-D-BM25.config  IDX-D-LMDS.config  IDX-D-SANSLEN.config  IDX-D-TFIDF.config  IDX-D.config  IDX-D1R1-BM25.config  IDX-D1R1-LMDS.config  IDX-D1R1-TFIDF.config  IDX-D1R1.config  IDX-D1R1MTF.config  IDX-DR-BM25.config  IDX-DR-LMDS.config  IDX-DR-SANSLEN.config  IDX-DR-TFIDF.config  IDX-DR.config  IDX_NN.config  IDX_NNX.config  IDX_NNX16.config  IDX_NNX8.config  IDX_NNXU.config  IDX_NNX_INT.config  IDX_NN_INT.config  INVIDX-E-BM25.config  INVIDX-E-LMDS.config  INVIDX-E-TFIDF.config  INVIDX-E.config  INVIDX-W.config  INVIDX.config  SADADF.config  SADADFRRR.config  SAWIT.config  SAWIT2.config  SAWIT3.config  SAWITM.config
experiments/: check_equivalence.sh  doclen-clueweb.csv  doclen-gov2.csv  eval.R  eval_3.R  mem_info.csv  mem_used.sh  nodes_evaluated.csv  nodes_evaluated.sh  nodes_evaluated_2005.csv  nodes_evaluated_2006.csv  nodes_evaluated_and_2005.csv  nodes_evaluated_and_2006.csv  phrase_time_2005.csv  phrase_time_2006.csv  phrase_time_and_2005.csv  phrase_time_and_2006.csv  phrases_time.sh  rank_times.sh  ranker_times_2005.csv  ranker_times_2006.csv  run.sh  sbatch_mem_used.sh  sbatch_nodes_evaluated.sh  time_per_wtnode.R  trec-2005-and-profile-IDX_SAWIT.csv  trec-2005-and-profile-IDX_SAWIT2.csv  trec-2005-and-profile-INVIDX.csv  trec-2005-and-time-IDX_SAWIT.csv  trec-2005-and-time-IDX_SAWIT2.csv  trec-2005-and-time-INVIDX.csv  trec-2005-or-profile-IDX_SAWIT2.csv  trec-2005-or-time-IDX_SAWIT2.csv  trec-2005-profile-IDX_SAWIT.csv  trec-2005-profile-IDX_SAWIT2.csv  trec-2005-profile-INVIDX.csv  trec-2005-time-IDX_SAWIT.csv  trec-2005-time-IDX_SAWIT2.csv  trec-2005-time-INVIDX.csv  trec-2005-time-ex-and-wt.csv  (+22 more)
extras/: clueweb-collection.indricfg  gov2-collection.indricfg  speeches-collection.indricfg  trec8-collection.indricfg  wikishort-collection.indricfg  wt10g-collection.indricfg
include/surf/: .gitignore  block_postings_list.hpp  comm.hpp  config.hpp  construct_DUP2.hpp  construct_U.hpp  construct_col_len.hpp  construct_darray.hpp  construct_doc_border.hpp  construct_doc_cnt.hpp  construct_doc_lengths.hpp  construct_doc_perm.hpp  construct_invidx.hpp  construct_max_doc_len.hpp  df_sada.hpp  doc_perm.hpp  idx_d.hpp  idx_d1r1.hpp  idx_d1r1mtf.hpp  idx_dr.hpp  idx_dummy.hpp  idx_invfile.hpp  idx_nn.hpp  idx_sawit.hpp  idx_sawit2.hpp  idx_sawit3.hpp  indexes.hpp  invfile_postings_list.hpp  phrase_detector.hpp  phrase_parser.hpp  query.hpp  query_parser.hpp  rank_functions.hpp  stopword_filter.hpp  util.hpp
queries/: trec0406-adhoc.qry  trec2005-efficiency-10.qry  trec2005-efficiency-100.qry  trec2005-efficiency-1000.qry  trec2005-efficiency.qry  trec2006-efficiency-10.qry  trec2006-efficiency-100.qry  trec2006-efficiency-1000.qry  trec2006-efficiency.qry  wikishort.qry
results/: trec8_wtdup_stat.R  trec8_wtdup_stat.txt
src/: .gitignore  doc_lengths.cpp  gen_patterns.cpp  gen_patterns_int.cpp  surf_daemon.cpp  surf_index.cpp  surf_phrase_daemon.cpp  surf_phrases.cpp  surf_qry.cpp  surf_query.cpp  surf_search.cpp  surf_trec.cpp  test.cpp  test_postings_list.cpp
tools/: .gitignore  Makefile  convert_results_to_trec.cpp  create_surf_collection.cpp  extract_document.cpp  extract_documents.cpp  indri_stem_krovetz.cpp  indri_to_surf.cpp  int2surf.cpp  select_random_queries.cpp  size_info_nn.cpp  surf2dcc13.cpp  surf_collection_info.cpp  text2surf.cpp
